--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "capstoneprojectbackend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "seed:services": "node bin/services.seed.js",
+    "seed:barbers": "node bin/barbers.seed.js",
+    "seed": "npm run seed:services && npm run seed:barbers"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +22,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
