--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed:services": "node bin/services.seed.js",
-    "seed:barbers": "node bin/barbers.seed.js",
-    "seed": "npm run seed:services && npm run seed:barbers"
+    "seed:users": "node bin/users.seed.js",
+    "seed": "npm run seed:services && npm run seed:users"
   },
   "keywords": [],
   "author": "",
