--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed:services": "node bin/services.seed.js",
-    "seed:users": "node bin/users.seed.js",
-    "seed": "npm run seed:services && npm run seed:users"
+    "seed": "node bin/data.seed.js"
   },
   "keywords": [],
   "author": "",
